--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,83 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.DetailActivity">
-
-    <ImageView
-        android:id="@+id/imgdetailPoster"
-        android:layout_width="139dp"
-        android:layout_height="191dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
-
-    <TextView
-        android:id="@+id/txtdetailTitle"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="32dp"
-        android:text="title"
-        app:layout_constraintEnd_toStartOf="@+id/imgdetailFavorite"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtdetailReleaseDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
-        android:text="releasedate"
-        app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
-        app:layout_constraintTop_toBottomOf="@+id/txtdetailTitle" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:textStyle="bold"
-        android:layout_marginTop="28dp"
-        android:text="Overview"
-        app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
-        app:layout_constraintTop_toBottomOf="@+id/txtdetailReleaseDate" />
-
-    <ScrollView
-        android:layout_width="193dp"
-        android:layout_height="172dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:ignore="MissingConstraints">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/imgdetailPoster"
+            android:layout_width="139dp"
+            android:layout_height="191dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <TextView
-            android:id="@+id/txtdetailOverview"
-            android:layout_width="match_parent"
+            android:id="@+id/txtdetailTitle"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            android:text="title"
+            app:layout_constraintEnd_toStartOf="@+id/imgdetailFavorite"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            android:text="sub"
+        <TextView
+            android:id="@+id/txtdetailReleaseDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="12dp"
+            android:text="releasedate"
+            app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
+            app:layout_constraintTop_toBottomOf="@+id/txtdetailTitle" />
 
-            app:layout_constraintVertical_bias="0.024" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:textStyle="bold"
+            android:layout_marginTop="28dp"
+            android:text="Overview"
+            app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
+            app:layout_constraintTop_toBottomOf="@+id/txtdetailReleaseDate" />
 
-    </ScrollView>
+        <ScrollView
+            android:layout_width="193dp"
+            android:layout_height="172dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.583"
+            app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:ignore="MissingConstraints">
 
-    <ImageView
-        android:id="@+id/imgdetailFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_unfavorite_border_black_24dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/txtdetailOverview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="sub"
+
+                app:layout_constraintVertical_bias="0.024" />
+
+        </ScrollView>
+        <ImageView
+            android:id="@+id/imgdetailFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_unfavorite_border_black_24dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <include layout="@layout/bottom_sheet_detail_review"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
