--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,12 +20,12 @@
 
         <TextView
             android:id="@+id/txtdetailTitle"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="169dp"
+            android:layout_height="42dp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="32dp"
             android:text="title"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/imgdetailFavorite"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
@@ -36,7 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="12dp"
             android:text="releasedate"
             app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
             app:layout_constraintTop_toBottomOf="@+id/txtdetailTitle" />
@@ -73,7 +72,7 @@
 
         </ScrollView>
         <ImageView
-            android:id="@+id/imgdetailFavorite"
+            android:id="@+id/btnDetailFavorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
