insert review field favorite

--- a/app/src/main/res/layout/item_content_review.xml
+++ b/app/src/main/res/layout/item_content_review.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_container"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:paddingBottom="5dp">
 
@@ -81,14 +81,17 @@
         <TextView
             android:id="@+id/txtReviewContent"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="TextView"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.309"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7"
             app:layout_constraintVertical_bias="0.063"
+            tools:text="@tools:sample/lorem"
             tools:ignore="MissingConstraints" />
 
 
