--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,13 +20,14 @@
 
         <TextView
             android:id="@+id/txtdetailTitle"
-            android:layout_width="169dp"
-            android:layout_height="42dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="24dp"
             android:text="title"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/imgdetailFavorite"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,32 +52,26 @@
             app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
             app:layout_constraintTop_toBottomOf="@+id/txtdetailReleaseDate" />
 
-        <ScrollView
-            android:layout_width="193dp"
-            android:layout_height="172dp"
-            android:layout_marginTop="16dp"
+
+        <TextView
+            android:id="@+id/txtdetailOverview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+
+            android:layout_marginEnd="16dp"
+            android:text="sub"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.583"
             app:layout_constraintStart_toEndOf="@+id/imgdetailPoster"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
-            tools:ignore="MissingConstraints">
+            tools:ignore="MissingConstraints" />
 
-            <TextView
-                android:id="@+id/txtdetailOverview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:text="sub"
-
-                app:layout_constraintVertical_bias="0.024" />
-
-        </ScrollView>
         <ImageView
             android:id="@+id/btnDetailFavorite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="27dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_unfavorite_border_black_24dp" />
