--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -23,22 +23,25 @@
 
         <TextView
             android:id="@+id/txtTitle"
-            android:layout_width="193dp"
-            android:layout_height="23dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:textColor="@color/design_default_color_primary_dark"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_poster"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Title" />
 
         <TextView
             android:id="@+id/txtReleasedate"
-            android:layout_width="233dp"
-            android:layout_height="19dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="Title"
             android:ellipsize="end"
             android:textSize="12sp"
@@ -51,9 +54,10 @@
 
         <TextView
             android:id="@+id/txtDesctription"
-            android:layout_width="212dp"
+            android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             android:ellipsize="end"
             android:gravity="start"
             app:layout_constraintBottom_toBottomOf="parent"
